Closed Bug 580969 Opened 14 years ago Closed 14 years ago

nsHTMLSelectElement.cpp failed to compile with Sun Studio

Categories

(Core :: DOM: Core & HTML, defect)

x86
OpenSolaris
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b3

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

References

Details

Attachments

(1 file)

121   nsHTMLOptionElement *ItemAsOption(PRUint32 aIndex)
122   {
123     return mElements.SafeElementAt(aIndex, nsRefPtr<nsHTMLOptionElement>());
124   }
125 

Error: Overloading ambiguity between
"nsTArray<nsRefPtr<nsHTMLOptionElement>>::SafeElementAt(unsigned,
nsRefPtr<nsHTMLOptionElement>&)" and
"nsTArray<nsRefPtr<nsHTMLOptionElement>>::SafeElementAt(unsigned, const
nsRefPtr<nsHTMLOptionElement>&) const".
OS: Mac OS X → OpenSolaris
Attached patch patchSplinter Review
Attachment #459374 - Flags: review?(peterv)
Attachment #459374 - Flags: review?(peterv) → review+
Comment on attachment 459374 [details] [diff] [review]
patch

solved compilation issue with Sun Studio; safe patch
Attachment #459374 - Flags: approval2.0?
Attachment #459374 - Flags: approval2.0? → approval2.0+
http://hg.mozilla.org/mozilla-central/rev/0ed73d56efd5
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b3
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: