Bug 580969 nsHTMLSelectElement.cpp failed to compile with Sun Studio r=peterv a=bsmedberg